<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes">

    <Button
        android:id="@+id/addNotes"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_notes"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchNews"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/searchNews"
        app:layout_constraintEnd_toEndOf="@+id/listView" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="409dp"
        android:layout_height="669dp"
        app:layout_constraintBottom_toTopOf="@+id/addNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </ListView>

    <Button
        android:id="@+id/searchNews"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:background="@color/colorPrimary"

        android:text="@string/search"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addNotes" />
</androidx.constraintlayout.widget.ConstraintLayout>